src/components/WorkHistory/WorkHistory.css
.timeline-paper {
    padding: 6px 16px;
    background: #e7e7e7!important;
}

.year-employed {
    font-size: 20px!important;
    font-weight: bold!important;
    display: inline;
    padding: 2px 4px;
    color: white;
    border-radius: 5px;
}

.company-name {
    font-size: 20px!important;
    font-weight: bold!important;
}

.job-title {
    font-style: italic;
}

.timeline-dot {
    border-color: #a41d30!important;
}

.timeline-dot:hover {
    background: #a41d30;
}

.timeline-icon {
    width: 25px!important;
    height: 25px!important;
    padding: 2px;
    color: #a41d30;
}

.timeline-dot:hover .timeline-icon {
    color: white;
}

.timeline-connector {
    background-color: darkgrey;
}

